@@ -1,3 +1,6 @@
+[B]1.4.0[/B]
+- show episode number
+- also show related clips on joj.sk
 [B]1.3.11[/B]
 - poster fix
 [B]1.3.10[/B]
